removed comment from weathercontroller, fixed some styling for app.js/added weather icons, colors for max/min temps of the day, added simple media query for mobile, items are now all aligned in one column for small devices

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,7 +15,7 @@ h2 {
   margin-bottom: 5px;
 }
 .current-weather {
-  margin-bottom: 0px;
+  margin: 0px;
 }
 h4 {
   margin-top: 0;
@@ -41,6 +41,7 @@ h4 {
 .min-max-container {
   display: flex;
   align-items: center;
+  margin-top: 4rem;
 }
 
 .wind-humidity-container {
@@ -83,4 +84,26 @@ h4 {
   display: flex;
   align-items: center;
   flex-direction: column;
+  position: relative;
 }
+
+.weather-info #wicon{
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+@media (max-width: 600px) {
+  /* Change layout to single column */
+  .container {
+    flex-direction: column;
+  }
+  .temperature-container, .weather-info {
+    margin-top: 1rem;
+  }
+  .weather-container{
+    flex-direction: column;
+  }
+}
+  
